CORDA-4954 : Improvements to docker image : compatible with v3.3; image size; truststore (#4965)
* CORDA-4954

* test-docker

* test fix